<resources>
    <string name="app_name">Edupline</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="home_work_diary"><![CDATA[Home Work & Diary]]></string>
    <string name="transition_name_propic">post_propic</string>
    <string name="transition_name_name">post_name</string>
    <string name="transition_name_card">post_card</string>
    <string name="transition_name_time">post_time</string>
    <string name="transition_name_text">post_text</string>
    <string name="transition_name_post_image">post_image</string>
    <string name="transition_name_login_logo">login_tran</string>
    <string name="transition_name_login_pow">login_tran_pow</string>
    <string name="transition_name_login_name">login_tran_name</string>
    <string name="transition_name_photoView">photo_view</string>

    <string name="propic_caution">In case of any Inappropriate Image strict actions will be taken from Administration.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="Home_Work_Title">Title</string>
    <string name="Home_Work_contents">Home work detail</string>
    <string name="cheese_ipsum">Manipal University, formerly Manipal Academy of Higher Education, is a private research and educational institute located in Manipal, Karnataka, India. Manipal is extremely close to the temple town of Udupi.</string>
    <string name="noexamdata">No Exams Schedule</string>
    <string name="insert_homework">Insert HomeWork/Assignment</string>
    <string name="insert_exam">Insert Exam</string>
    <string name="select_class">Select Class</string>
    <string name="select_division">Select Division</string>
    <string name="attendance">Attendance</string>
    <string name="event">Events</string>
    <string name="exams">Exams</string>
    <string name="message">Messaging</string>
    <string name="suggestion">Suggestion/Complaints</string>
    <string name="homework">HomeWork/Assignments</string>
    <string name="select_subject">Select Subject</string>
    <string name="timetable">Time Table</string>

</resources>
