<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content">
    <android.support.v7.widget.CardView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_margin="5dp"
        card_view:cardCornerRadius="1dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/defaultpropic"
                android:layout_marginTop="8dp"
                card_view:layout_constraintTop_toTopOf="parent"
                android:transitionName="@string/transition_name_propic"
                android:layout_marginStart="8dp"
                card_view:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="8dp"
                android:id="@+id/profile_image" />

            <TextView
                android:text="Umar Mukhtar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/title"
                android:textStyle="bold"
                android:transitionName="@string/transition_name_name"
                android:layout_marginStart="16dp"
                card_view:layout_constraintLeft_toRightOf="@+id/profile_image"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="24dp"
                card_view:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:text="This is message from umar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/text"
                android:layout_marginStart="16dp"
                card_view:layout_constraintLeft_toLeftOf="parent"
                android:transitionName="@string/transition_name_text"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="16dp"
                card_view:layout_constraintRight_toRightOf="parent"
                android:layout_marginRight="16dp"
                card_view:layout_constraintHorizontal_bias="0.0"
                android:layout_marginTop="8dp"
                card_view:layout_constraintTop_toBottomOf="@+id/qa_image" />

            <TextView
                android:text="3 hours ago"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/time_rcv"
                android:transitionName="@string/transition_name_time"
                card_view:layout_constraintTop_toBottomOf="@+id/title"
                android:layout_marginStart="16dp"
                card_view:layout_constraintLeft_toRightOf="@+id/profile_image"
                android:layout_marginLeft="16dp"
                card_view:layout_constraintHorizontal_bias="0.61"
                android:layout_marginTop="8dp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                card_view:layout_constraintTop_toBottomOf="@+id/text"
                android:layout_marginRight="8dp"
                card_view:layout_constraintRight_toRightOf="parent"
                android:layout_marginLeft="8dp"
                card_view:layout_constraintLeft_toLeftOf="parent"
                card_view:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="4dp"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:layout_height="match_parent"
                    android:id="@+id/like"
                    android:background="?android:attr/selectableItemBackground"
                    >
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_not_liked"
                        android:id="@+id/like_icon"
                        android:layout_marginTop="8dp"
                        android:layout_marginLeft="8dp"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_marginLeft="12dp"
                        android:layout_marginTop="4dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Good Question"
                            android:layout_marginTop="8dp"
                            android:id="@+id/like_text" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="0"
                            android:textSize="10dp"
                            android:layout_marginLeft="2dp"
                            android:id="@+id/like_num" />
                    </LinearLayout>
                </LinearLayout>
                <Button
                    android:text="Answer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/answer_btn"
                    android:background="@android:color/background_light"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:layout_weight="1" />
            </LinearLayout>


            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_delete"
                android:id="@+id/delete_answer"
                card_view:layout_constraintTop_toTopOf="parent"
                android:visibility="gone"
                card_view:layout_constraintRight_toRightOf="parent"
                android:background="@color/cardview_light_background" />

            <ImageView
                android:id="@+id/qa_image"
                android:layout_width="0dp"
                android:layout_height="250dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                card_view:layout_constraintLeft_toLeftOf="parent"
                card_view:layout_constraintRight_toRightOf="parent"
                card_view:layout_constraintTop_toBottomOf="@+id/profile_image"
                card_view:srcCompat="@mipmap/ic_launcher"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>
